--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
+    "next": "^15.5.7",
+    "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   },
